RESOLVED FIXED250293
REGRESSION (257171@main): Static media query inside a dynamic media query breaks dynamic evaluation
https://bugs.webkit.org/show_bug.cgi?id=250293
Summary REGRESSION (257171@main): Static media query inside a dynamic media query bre...
Karl Dubost
Reported 2023-01-08 00:37:35 PST
Created attachment 464410 [details] test case demonstrating the issue 1. Go the testcase with a wide viewport in Safari Expected: the square is green Actual: the square is red. Firefox and Chrome displays green. PS: also opened on https://github.com/webcompat/web-bugs/issues/116472 This has a real consequence on the readability of this site http://d5f.org/en This is probably a site mistake, but there is still a behavior difference in between Safari and Chrome/Firefox on the other side.
Attachments
test case demonstrating the issue (565 bytes, text/html)
2023-01-08 00:37 PST, Karl Dubost
no flags
Radar WebKit Bug Importer
Comment 1 2023-01-08 00:37:47 PST
Matthieu Dubet
Comment 2 2023-01-09 00:26:32 PST
This is broken in STP and trunk indeed (it works on stable Safari). The parsing seems correct (with or without the CSS nesting experimental flag). (I've added a small snippet to check it: <script> var rule = s.sheet.cssRules[1]; l.textContent = rule.cssText; </script> ) It seems to be a media query evaluation issue.
Antti Koivisto
Comment 3 2023-01-10 05:22:42 PST
Antti Koivisto
Comment 4 2023-01-10 06:00:13 PST
EWS
Comment 5 2023-01-10 10:12:10 PST
Committed 258732@main (3e90af4d3b34): <https://commits.webkit.org/258732@main> Reviewed commits have been landed. Closing PR #8457 and removing active labels.
Antti Koivisto
Comment 6 2023-01-18 23:35:58 PST
*** Bug 250820 has been marked as a duplicate of this bug. ***
Antti Koivisto
Comment 7 2023-01-25 08:14:52 PST
*** Bug 251078 has been marked as a duplicate of this bug. ***
alan
Comment 8 2023-02-05 07:35:55 PST
*** Bug 251755 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.