Cherry-pick 3e90af4d3b34. rdar://problem/103732686

REGRESSION (257171@main): Static media query inside a dynamic media query breaks dynamic evaluation
    https://bugs.webkit.org/show_bug.cgi?id=250293
    rdar://103732686

    Reviewed by Simon Fraser.

    Dynamic queries end up always matching.

    * LayoutTests/fast/media/mq-nested-non-dynamic-expected.html: Added.
    * LayoutTests/fast/media/mq-nested-non-dynamic.html: Added.
    * Source/WebCore/style/RuleSetBuilder.cpp:
    (WebCore::Style::RuleSetBuilder::MediaQueryCollector::pop):

    Take care we don't pop a wrong stack frame. Static queries don't add to the stack.

    Canonical link: https://commits.webkit.org/258732@main

Canonical link: https://commits.webkit.org/258608.37@safari-7615.1.18-branch